welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: ';' expected but ')' found.
      return (die1+1)%6)+die2
                       ^